--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,63 @@
 /* You can add global styles to this file, and also import other style files */
+@import "~bootstrap/dist/css/bootstrap.css";
+
+@import url('https://fonts.googleapis.com/css?family=Dancing+Script|Open+Sans+Condensed:300');
+@import url('http://fonts.googleapis.com/css?family=Scope+One');
+@import url('http://fonts.googleapis.com/css?family=Lato');
+
+@font-face {
+  font-family: 'Campton_Bold_DEMO';
+  src: url('/assets/fonts/Campton-font/Rene_Bieder_Campton_Bold_DEMO.otf');
+}
+
+@font-face {
+  font-family: 'Campton_Bold_light';
+  src: url('/assets/fonts/Campton-font/Rene_Bieder_Campton_Light_DEMO.otf');
+}
+
+@font-face {
+  font-family: 'Holland';
+  src: url('/assets/fonts/Holland Script/Holland.otf');
+}
+
+
+body {
+  padding: 0px;
+  margin: 0px;
+  font: 400 15px Lato, sans-serif;
+  line-height: 1.8;
+  color: #818181;
+}
+
+
+/* social media stuff  */
+
+.social:hover {
+  -webkit-transform: scale(1.1);
+  -moz-transform: scale(1.1);
+  -o-transform: scale(1.1);
+}
+.social {
+  -webkit-transform: scale(0.8);
+  /* Browser Variations: */
+
+  -moz-transform: scale(0.8);
+  -o-transform: scale(0.8);
+  -webkit-transition-duration: 0.5s;
+  -moz-transition-duration: 0.5s;
+  -o-transition-duration: 0.5s;
+  color:#DDC8B8;
+}
+
+#social-fb:hover {
+  color: #3B5998;
+}
+#social-tw:hover {
+  color: #4099FF;
+}
+#social-gp:hover {
+  color: #d34836;
+}
+#social-em:hover {
+  color: #DDC8B8;
+}
